crates/ty_python_semantic/resources/mdtest/snapshots/scoping.md_-_Scoping_rules_for_ty…_-_Nested_formal_typeva…_-_Generic_function_wit…_(f58a51442a16371e).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: scoping.md - Scoping rules for type variables - Nested formal typevars must be distinct - Generic function within generic function
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/scoping.md
---

# Python source files

## mdtest_snippet.py

```
1 | def f[T](x: T, y: T) -> None:
2 |     def ok[S](a: S, b: S) -> None: ...
3 | 
4 |     # error: [shadowed-type-variable]
5 |     def bad[T](a: T, b: T) -> None: ...
```

# Diagnostics

```
error[shadowed-type-variable]: Generic function `bad` uses type variable `T` already bound by an enclosing scope
 --> src/mdtest_snippet.py:5:9
  |
5 |     def bad[T](a: T, b: T) -> None: ...
  |         ^^^ `T` used in function definition here
  |
 ::: src/mdtest_snippet.py:1:5
  |
1 | def f[T](x: T, y: T) -> None:
  |     ------------------------ Type variable `T` is bound in this enclosing scope
  |

```
