crates/ty_python_semantic/resources/mdtest/snapshots/scoping.md_-_Scoping_rules_for_ty…_-_Type_parameter_defau…_-_Legacy_TypeVar_in_me…_(2ed4c18a38ed9090).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: scoping.md - Scoping rules for type variables - Type parameter defaults cannot reference outer-scope type parameters - Legacy TypeVar in method with outer-scope class TypeVar
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/scoping.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypeVar, Generic
2 | 
3 | T1 = TypeVar("T1")
4 | T2 = TypeVar("T2", default=T1)
5 | 
6 | class Foo(Generic[T1]):
7 |     # error: [invalid-type-variable-default] "Invalid use of type variable `T2`: default of `T2` refers to out-of-scope type variable `T1`"
8 |     def method(self, x: T2) -> T2:
9 |         return x
```

# Diagnostics

```
error[invalid-type-variable-default]: Invalid use of type variable `T2`
 --> src/mdtest_snippet.py:8:25
  |
4 | T2 = TypeVar("T2", default=T1)
  | ------------------------------ `T2` defined here
5 |
6 | class Foo(Generic[T1]):
7 |     # error: [invalid-type-variable-default] "Invalid use of type variable `T2`: default of `T2` refers to out-of-scope type variable `…
8 |     def method(self, x: T2) -> T2:
  |                         ^^ Default of `T2` references out-of-scope type variable `T1`
  |
info: See https://typing.python.org/en/latest/spec/generics.html#scoping-rules

```
