crates/ty_python_semantic/resources/mdtest/snapshots/scoping.md_-_Scoping_rules_for_ty…_-_Type_parameter_defau…_-_Nested_functions_(3f2ee9fa81da0177).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: scoping.md - Scoping rules for type variables - Type parameter defaults cannot reference outer-scope type parameters - Nested functions
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/scoping.md
---

# Python source files

## mdtest_snippet.py

```
1 | def outer[T]():
2 |     # error: [invalid-type-variable-default] "Type parameter `U` cannot use outer-scope type parameter `T` as its default"
3 |     def inner[U = T](): ...
4 |     def ok[U = int](): ...  # OK
```

# Diagnostics

```
error[invalid-type-variable-default]: Invalid default for type parameter `U`
 --> src/mdtest_snippet.py:3:19
  |
1 | def outer[T]():
  |           - `T` defined here
2 |     # error: [invalid-type-variable-default] "Type parameter `U` cannot use outer-scope type parameter `T` as its default"
3 |     def inner[U = T](): ...
  |                   ^ `T` is a type parameter bound in an outer scope
  |
info: See https://typing.python.org/en/latest/spec/generics.html#scoping-rules

```
